- GUI — Switching to native Hytale customUI - Full transition from HyUI to the native `InteractiveCustomUIPage' API - All dependencies on HyUI have been removed — the plugin is completely standalone